Se inicia a realizar pruebas

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <link href="assets/css/animate.css" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/main.css">
     </head>
-    <body class="theme-ligth page-header-textura" id="page-home">
+    <body class="theme-dark page-header-textura" id="page-home">
         <header class="curso-presentacion page-header" id="CursoPresentacion">
             <div class="container">
                 <div class="curso-topbar"><a class="curso-topbar__logo"><svg xmlns="http://www.w3.org/2000/svg" width="168.273" height="164.177" viewBox="0 0 168.273 164.177">
