--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -20,15 +20,146 @@
     <div class="header">
         <div class="card">
             <div class="card-body">
-                <article class="row my-4">
+                <div class="row my-4">
                     <div class="col-12 col-md-6">
                         <p>Las organizaciones en un contexto comercial, hace relación a un conjunto de personas, recursos y medios organizados de forma intencional y planificada, enfocada a lograr un mismo objetivo, económico o social. Este concepto es muy similar a término empresa, la cual está enfocado específicamente con la rentabilidad y sostenibilidad en un mercado, por ende, la generación de riqueza. </p>
-                        <p>Según la Guía de Responsabilidad Social ISO 26000 de ICONTEC, define la organización como una entidad o grupo de personas e instalaciones con responsabilidad, autoridades y relaciones establecidas y objetivos identificables. </p>
+                        <p class="mt-4">Según la Guía de Responsabilidad Social ISO 26000 de ICONTEC, define la organización como una entidad o grupo de personas e instalaciones con responsabilidad, autoridades y relaciones establecidas y objetivos identificables. </p>
                     </div>
                     <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/recursos.svg" /></div>
-                </article>
-                <p>La gráfica complementa la última definición, ya que esta muestra las relaciones que se establecen entre los recursos, cada uno tiene una responsabilidad dentro de la organización, ya sea proveer un servicio o producto, gestionar la información, transformar una materia prima o generar valor.</p>
+                </div>
+                <p>La gráfica complementa la última definición, ya que esta muestra las relaciones que se establecen entre los recursos, cada uno tiene una responsabilidad dentro de la organización, ya sea proveer un servicio o producto, gestionar la información, transformar una materia prima o generar valor.</p><br />
                 <p>Tanto las organizaciones como las empresas, tienen una estructura de personas con responsabilidades sobre unas actividades en especial, estas a su vez, componen una serie de procesos que une el esfuerzo humano, técnico y tecnológico para lograr un objetivo específico dentro de un sistema llamado empresa; las cuales en la actualidad, en su gran mayoría tienen un enfoque basado en procesos, los cuales tienen unas fuentes de entradas, entradas, actividades, salidas y receptores de las salidas, estos últimos tienen como resultado elementos que necesita el siguiente proceso para trabajar o un producto o servicio final.</p><img class="img-fluid mt-6" src="assets/images/pages/ilustraciones/recursos_mapa.svg" /><img class="img-fluid mt-6" src="assets/images/pages/ilustraciones/recursos_img.svg" />
+            </div>
+        </div>
+    </div>
+</div>
+<div id="centros"></div>
+<div class="container">
+    <div class="header-ecored">
+        <h1>2.1 Centros de Distibución</h1>
+    </div>
+    <div class="header">
+        <div class="card">
+            <div class="card-body">
+                <div class="row my-4">
+                    <div class="col-12 col-md-5">
+                        <p>Algunas empresas cuentan con Centros de Distribución, los cuales son espacios planificados para ubicar, mantener y manipular mercancías y materiales (Mora, 2011). Las actividades que se desarrollan son diferentes de acuerdo con el tipo de operación; sin embargo, estas se complementan dado que funcionan como un sistema, con entradas, salidas y controles de procesos e información. En esta definición aplican diferentes técnicas y procesos logísticos, los cuales permiten la optimización de los procesos de una organización, disminuyendo costos y tiempos.</p>
+                    </div>
+                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/2_1_centros.png" /></div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <p>Los Centros de Distribución no funcionan como islas dentro de una organización, es necesaria la interacción permanente con sus diferentes áreas ya que estas con su funcionamiento sistémico logran dar continuidad a la información que ingresa, por ejemplo: un pedido de un cliente puede pasar desde el área de servicio al cliente o de ventas a compras, luego a producción y por último al proceso de empaque y despachos, manteniendo siempre las especificaciones de la solicitud inicial del cliente, agregando valor en cada actividad. </p><br />
+                <p>Ver un centro de distribución como un sistema, permite incluir diferentes actividades y procesos que participan en la operación, tales actividades son: Los procesos de entrada hacen referencia a toda la información que ingresa o algún tipo de recurso que se requiere para que el centro de distribución funcione, en este caso seria los productos o servicios comprados, la información suministrada por lo proveedores y clientes y el resultado de procesos de logística inversa. En cuanto a los procesos internos, significa las actividades de almacenamiento de materias o mercancía, administración optimo del inventario, atención oportuna de los pedidos, facturación, cargue y despacho de lo almacenado. </p><br />
+                <p>Dentro de los procesos de salida, se contempla las acciones de transporte, distribución y entrega eficiente de productos, servicio al cliente y servicio posventa.</p><img class="img-fluid mt-5 col-12" src="assets/images/pages/ilustraciones/2_1_mapa.svg" />
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h1 class="mb-5" style="color: #1465C0">Objetivos de un Centro de Distribución</h1>
+                <p class="mb-3">Los principales objetivos de un Centro de Distribución, están enfocados a la eficiencia y eficacia de la operación, siendo un reto permanente la disminución de sus costos. De forma general se presentan a continuación los objetivos: </p>
+                <ul>
+                    <li style="color: #4DD0E0">
+                        <p style="color: #00223D">Realizar balanceo entre la producción y demanda de un producto, administrando adecuadamente su inventario.</p>
+                    </li>
+                    <li style="color: #4DD0E0">
+                        <p style="color: #00223D">Entregar los materiales o productos bajo la metodología de justo a tiempo a los clientes finales.</p>
+                    </li>
+                    <li style="color: #4DD0E0">
+                        <p style="color: #00223D">Tener control permanente sobre los inventarios de materiales y mercancías. </p>
+                    </li>
+                    <li style="color: #4DD0E0">
+                        <p style="color: #00223D">Desarrollar estrategias de consolidación de mercancía cuando provienen de diferentes plantas o empresas y su destino es un mismo cliente.</p>
+                    </li>
+                    <li style="color: #4DD0E0">
+                        <p style="color: #00223D">Alcanzar un movimiento permanente de la mercancía, con el fin de hacer más eficiente la operación. </p>
+                    </li>
+                </ul>
+                <h1 class="text-center my-5" style="color: #4DD0E0"> el sistema logístico</h1><img class="img-fluid col-12" src="assets/images/pages/ilustraciones/sistema_logistico.svg" />
+            </div>
+        </div>
+        <div class="card" style="background-color:#94E3EC"><img src="assets/images/pages/ilustraciones/actividades.svg" style="margin-top: -4px" />
+            <div class="col-12 col-md-8 mt-5">
+                <article class="custom-item d-flex align-items-center flex-column flex-md-row"><img class="custom-item-img my-2" src="assets/images/pages/ilustraciones/actividades1.svg" />
+                    <div class="card mb-0" style=" border-color: #94E3EC">
+                        <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de recepción:</strong>es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía. La mercancía se puede recibir de diferentes formas, tales como:</div>
+                    </div>
+                </article>
+            </div>
+            <div class="row justify-content-center mt-5">
+                <div class="col-12 col-md-3 my-6 my-md-0">
+                    <div class="card" style="border-color:#C3E7F9">
+                        <div class="card-body text-center" style="background-color:#C3E7F9">
+                            <div class="avatar avatar-xxl card-avatar"><img class="avatar-img" src="assets/images/pages/ilustraciones/ico1.svg" /></div><strong>Paletizado: </strong>hace referencia a la ubicación de la mercancía sobre estibas de madera o plástico, previo embalaje, el cual es realizado por el proveedor.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 my-6 my-md-0">
+                    <div class="card" style="border-color:#C3E7F9">
+                        <div class="card-body text-center" style="background-color:#C3E7F9">
+                            <div class="avatar avatar-xxl card-avatar"><img class="avatar-img" src="assets/images/pages/ilustraciones/ico2.svg" /></div><strong>A granel: </strong>método utilizado para cierto tipo de mercancía, que por su cantidad y forma, debe ser entregado con empaques especiales, por ejemplo: el arroz, el frijol, azúcar, entre otros.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 mt-6 my-md-0">
+                    <div class="card" style="border-color:#C3E7F9">
+                        <div class="card-body text-center" style="background-color:#C3E7F9">
+                            <div class="avatar avatar-xxl card-avatar"><img class="avatar-img" src="assets/images/pages/ilustraciones/ico3.svg" /></div><strong>En arrume:<este>tipo de recibo, se hace con productos en cajas o en bultos, ese es el caso del recibo del café. </este></strong>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body"></div>
+            <div class="row align-items-center justify-content-center my-5">
+                <div class="col-12 col-md-7">
+                    <article class="d-flex align-items-center flex-column flex-md-row"><img class="custom-item-img my-2" src="assets/images/pages/ilustraciones/actividades2.svg" />
+                        <div class="card mb-5" style=" border-color: #94E3EC">
+                            <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de Almacenamiento: </strong>el almacenamiento tiene como fin, proteger y conservar los materiales o mercancía, en condiciones óptimas, durante un determinado espacio de tiempo, es decir con las características y atributos con los cuales ingresaron al centro y con las que el cliente las necesita para satisfacer sus necesidades. </div>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-12 col-md-4">
+                    <article class="custom-item d-flex align-items-center flex-column flex-md-row"><img class="custom-item-img my-2" src="assets/images/pages/ilustraciones/actividades3.svg" />
+                        <div class="card mb-5" style=" border-color: #94E3EC">
+                            <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de Salida: </strong>está compuesto por las actividades al final del flujo dentro del centro, tales como el Picking, empaque y embarque. </div>
+                        </div>
+                    </article>
+                </div><img class="img-fluid col-12" src="assets/images/pages/ilustraciones/actividades_secuenciales.svg" />
+            </div>
+        </div>
+    </div>
+</div>
+<div id="estrategias"></div>
+<div class="container">
+    <div class="header-ecored">
+        <h1>2.2 Estrategias Competitivas</h1>
+    </div>
+    <div class="header">
+        <div class="card">
+            <div class="card-body">
+                <div class="row my-4">
+                    <div class="col-12 col-md-5">
+                        <p>De acuerdo con lo definido por el diccionario de la Real Academia Española, la palabra estrategia significa: que es un proceso regulable, conjunto de reglas que aseguran una decisión óptima en cada momento, y en el caso de la palabra competitiva, significa: relativo a competencia rivalidad de quienes disputan una misma cosa o la pretenden. Teniendo en cuenta lo anterior, las estrategias competitivas buscan tomar decisiones acertadas en los momentos en que se requiera para lograr algo que se pretenda, lo cual sea el objeto de la estrategia misma, ya sea la participación en un mercado, el aumento de atención a nuevos clientes, la disminución de tiempos de entrega de un producto, la satisfacción de los clientes, entre muchos otros aspectos que son relevantes en una organización.</p>
+                    </div>
+                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/estrategias1.svg" /></div>
+                </div>
+                <div class="row my-4">
+                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/estrategias2.svg" /></div>
+                    <div class="col-12 col-md-4">
+                        <p>Tal como se muestra en la anterior gráfica, y complementando las definiciones, en las estrategias se requiere una idea o un concepto con el cual un equipo de personas o de recursos, puedan trabajar para lograr un objetivo en común, el cual se define según la necesidad o las políticas de la empresa. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="py-3" style="background-color:#D4F4F7; border-radius:9px">
+            <div class="row">
+                <div class="col-1 col-md-1 text-center"><img class="img-fluid ml-5" src="assets/images/pages/ilustraciones/comilla1.svg" /></div>
+                <div class="col-10 col-md-10">
+                    <p class="mb-0 ml-4">Dicho sistema recibe unos estímulos concretados en solicitudes y utilizando el conjunto de las informaciones patrimonio del sistema, según indican sus reglas de gestión, elabora unos resultados que son enviados al exterior (Díaz, 2013). </p>
+                </div>
+                <div class="col-1 col-md-1 text-center"><img class="img-fluid mt-4 mr-5" src="assets/images/pages/ilustraciones/comilla2.svg" /></div>
             </div>
         </div>
     </div>
