Se termina la programación y carga de contenidos

--- a/public/index.html
+++ b/public/index.html
@@ -114,12 +114,12 @@
                 <div class="row">
                     <div class="col-12 col-md-5">
                         <h3 class="footer-subtitulo">Contenido Instruccional</h3>
-                        <p class="footer-texto"><strong>Nombre completo </strong><br />
-                            <strong>Nombre completo </strong><br /> <span class="text-small">Instructores<br /></span></p>
-                        <p class="footer-texto"><strong>Nombre completo </strong><br />
-                            <strong>Nombre completo </strong><br /> <span class="text-small">Diseño instruccional<br /></span></p>
+                        <p class="footer-texto"><strong>Elizabeth Mena Rengifo </strong><br />
+                            <strong>Rachman Bustillo Martínez</strong><br />
+                            <strong>Érika Alejandra Beltrán Cuesta </strong><br />
+                            <strong>Maritza Paz Calderón </strong><br />
+                            <strong>Rafael Neftalí Lizcano Reyes. </strong><br /> <span class="text-small">Diseño instruccional<br /></span></p>
                         <p class="footer-texto"><strong>Gloria Lee </strong><br /> <span class="text-small">Responsable del equipo<br /></span></p>
-                        <p class="footer-texto"><span class="text-small text-uppercase">Nombre del Centro </span><br /><span class="text-small">Ubicación</span></p>
                     </div>
                     <div class="col-12 col-md-5">
                         <h3 class="footer-subtitulo">Diseño y desarrollo de recursos educativos digitales</h3>
