Se ajusta el codigo y corrige mayuscula en creditos

--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -80,8 +80,8 @@
                 <h1 class="text-center my-5" style="color: #4DD0E0"> el sistema logístico</h1><img class="img-fluid col-12" src="assets/images/pages/ilustraciones/sistema_logistico.svg" />
             </div>
         </div>
-        <div class="card" style="background-color:#94E3EC"><img src="assets/images/pages/ilustraciones/actividades.svg" style="margin-top: -4px" />
-            <div class="col-12 col-md-8 mt-5">
+        <div class="card" style="background-color:#94E3EC"><img class="img-fluid" src="assets/images/pages/ilustraciones/actividades.svg" style="margin-top: -4px" />
+            <div class="col-11 col-md-8 mt-5">
                 <article class="custom-item d-flex align-items-center flex-column flex-md-row"><img class="custom-item-img my-2" src="assets/images/pages/ilustraciones/actividades1.svg" />
                     <div class="card mb-0" style=" border-color: #94E3EC">
                         <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de recepción:</strong>es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía. La mercancía se puede recibir de diferentes formas, tales como:</div>
@@ -126,7 +126,7 @@
                             <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de Salida: </strong>está compuesto por las actividades al final del flujo dentro del centro, tales como el Picking, empaque y embarque. </div>
                         </div>
                     </article>
-                </div><img class="img-fluid col-12" src="assets/images/pages/ilustraciones/actividades_secuenciales.svg" />
+                </div><img class="img-fluid col-11" src="assets/images/pages/ilustraciones/actividades_secuenciales.svg" />
             </div>
         </div>
     </div>
@@ -148,7 +148,7 @@
                 <div class="row my-4">
                     <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/estrategias2.svg" /></div>
                     <div class="col-12 col-md-4">
-                        <p>Tal como se muestra en la anterior gráfica, y complementando las definiciones, en las estrategias se requiere una idea o un concepto con el cual un equipo de personas o de recursos, puedan trabajar para lograr un objetivo en común, el cual se define según la necesidad o las políticas de la empresa. </p>
+                        <p class="ml-3">Tal como se muestra en la anterior gráfica, y complementando las definiciones, en las estrategias se requiere una idea o un concepto con el cual un equipo de personas o de recursos, puedan trabajar para lograr un objetivo en común, el cual se define según la necesidad o las políticas de la empresa. </p>
                     </div>
                 </div>
             </div>
