--- a/public/pages/4-tema.html
+++ b/public/pages/4-tema.html
@@ -52,7 +52,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso1.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Edición</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>La conversión es necesaria cuando se requiere que un dato pase de un tipo o unidad de clasificación a otro. Este proceso se da según la naturaleza y fuente de los mismos y existen herramientas matemáticas y fórmulas que permiten que estas acciones se obtengan para un mejor tratamiento de los mismos.</p>
@@ -60,7 +60,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3 mt-5" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso2.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Codificación</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>Transformar en una manera sistemática para ordenar de mejor manera los datos, que posteriormente pasarán a registro y proceso, naturalmente se codifican para tener una visión clara de los grupos, clases y de los datos, para su fácil identificación.</p>
@@ -68,7 +68,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3 mt-5" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso3.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Clasificación</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>Es la acción de determinar uno o más atributos comunes que se toman para seleccionar y agrupar un conjunto de datos que aporta significancia al proceso y tratamiento de los datos.</p>
@@ -76,7 +76,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3 mt-5" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso4.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Conversión</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>La conversión es necesaria cuando se requiere que un dato pase de un tipo o unidad de clasificación a otro. Este proceso se da según la naturaleza y fuente de los mismos y existen herramientas matemáticas y fórmulas que permiten que estas acciones se obtengan para un mejor tratamiento de los mismos.</p>
@@ -84,7 +84,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3 mt-5" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso5.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Copia y duplicación</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>Esta acción permite adquirir facsímiles de los datos, que se pueden seleccionar para distribuirlos a más de un usuario final o para agruparlos en diferentes pasos del ciclo de procesamiento. </p>
@@ -92,7 +92,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3 mt-5" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso6.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Verificación</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>Esta acción es de mucha importancia para el resultado final y nos permite tener una fiabilidad de los resultados; en esencia, nos asegura que los datos tienen una fiel validez desde su captura o su toma dependiendo del medio de cómo se tome; sin embargo, lo que se busca es disminuir el error o el sesgo en la manipulación de los datos y sean los que se requieren según la muestra.</p>
@@ -100,7 +100,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3 mt-5" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso7.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Comparación y análisis</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>Estos procesos muestran qué factores determinan el destino, tratamiento y aplicabilidad de los datos; existen atributos, tales como, el orden, naturaleza, proporción, relación, similitud o valor relativo de los datos. </p>
@@ -108,7 +108,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3 mt-5 mb-3" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso8.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Cálculo</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>Procesamiento aritmético de las operaciones básicas de las matemáticas y álgebra, además son necesarias para el proceso de conversión a una manera más efectiva y válida en el proceso del manejo de los datos.</p>
@@ -128,7 +128,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso9.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Preparación de reportes</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>estos deben ser preparados de forma eficiente con el fin de garantizar la confiabilidad de la información que se generará. Un claro ejemplo de esto, son los reportes de inventarios, reporte de ventas mensual, el reporte de despacho de mercancía a un determinado lugar, todo esto le permitirá a la organización, evaluar el estado de la operación. </p>
@@ -136,7 +136,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3 mt-5" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso10.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Comunicación de los datos</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>Para realizar una adecuada comunicación de los datos es necesario utilizar medios por los cuales se pueda mostrar de forma clara, precisa y dinámica, con el fin de que el receptor tenga la misma percepción de la información de quien la preparo, de igual forma para que sea más entendible hay que tratarla y analizarla. </p>
@@ -144,7 +144,7 @@
             </div>
             <div class="row justify-content-center align-items-center mx-3 mt-5 mb-3" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso11.svg" style="width: 60%" /></div>
-                <div class="col-10" style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px">
+                <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Almacenamiento de datos</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
                     <p>En esta etapa, es muy importante los protocolos que establezca la organización para proveer medios de almacenamiento confiable y con medidas de seguridad comprobadas, ya que en ella puede encontrarse proyectos de innovación en el sector, fórmulas para la fabricación de un producto o un nuevo desarrollo, y es necesario salvaguardar la información que puede generar una ventaja competitiva en el mercado. </p>
