--- a/public/pages/actividad-1.html
+++ b/public/pages/actividad-1.html
@@ -6,9 +6,10 @@
                 <h1 class="curso-titulo" id="curso-titulo-tema">Aspectos y características de los Sistemas de Información</h1>
                 <div class="brand-line-primary"></div>
                 <div class="keywords"><span class="badge badge-pill badge-light mr-2">#Sistemasdeinformación</span><span class="badge badge-pill badge-light mr-2">#organizaciones</span></div>
+                <div class="barra-dots mt-5"><img class="img-fluid" src="../assets/images/header/icon_dots.svg" /></div>
             </div>
             <div class="col-12 col-lg-6">
-                <div class="d-none d-lg-block"><img src="assets/images/header/header_media.svg" /></div>
+                <div class="d-none d-lg-block"><img src="assets/images/header/header_media.svg" style="max-width:80%" /></div>
             </div>
         </div>
     </div>
@@ -25,7 +26,7 @@
             <hr class="line-100 bg-orange" />
             <div class="text-center p-2">
                 <h2>¡Pon a prueba tu conocimiento! </h2>
-                <p>La siguiente actividad tiene como propósito validar los conocimientos adquiridos sobre los <strong>tipos de medidas a tomar para elaborar patrones femeninos.</strong></p><a class="btn btn-colour-Orange" href="media/actividad-1/index.html" target="_blank">Iniciar </a>
+                <p>La siguiente actividad tiene como propósito validar los conocimientos adquiridos sobre <strong>aspectos y características de los sistemas de información</strong></p><a class="btn btn-colour-Orange" href="media/actividad-1/index.html" target="_blank">Iniciar </a>
             </div>
             <hr class="line-100 bg-orange" />
         </div>
