--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -21,10 +21,10 @@
         <div class="card">
             <div class="card-body">
                 <div class="row my-4">
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-5">
                         <p>Teniendo en cuenta el dinamismo de los mercados que se mencionaba anteriormente y específicamente las empresas que están inmersas en él, les ingresan y generan gran cantidad de información relacionada con todas las partes interesadas en su actividad, ya sean proveedores, clientes, el gobierno, otras empresas y hasta la misma comunidad o sociedad que se encuentra en su entorno de acción, y cada una de estas, juega un papel importante en el logro de los objetivos organizacionales, en la rentabilidad y su sostenibilidad, motivo por el cual se debe tratar adecuadamente todas estas entradas y salidas de información. </p>
                     </div>
-                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/sistemas.svg" /></div>
+                    <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/sistemas.svg" /></div>
                 </div>
                 <div class="row my-5">
                     <div class="col-12 col-md-5">
@@ -41,7 +41,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-12-col-md-6 text-center"><img class="img-fluid" src="assets/images/pages/ilustraciones/sistemas2.svg" /></div>
+                    <div class="col-12 col-md-6 text-center"><img class="img-fluid" src="assets/images/pages/ilustraciones/sistemas2.png" /></div>
                 </div>
             </div>
         </div>
@@ -60,13 +60,11 @@
     <div class="header">
         <div class="card">
             <div class="card-body">
+                <p>Esta es una forma textual de describir lo que sucede al interior de un sistema de información de una empresa, el cual funciona como la red de neuronas y venas del cuerpo humano, que constantemente recibe estímulos de diferente procedencia, los procesa y los convierte en una respuesta u acción</p><br />
+                <p>Los sistemas de información pueden ser enfocados en diferentes aspectos o necesidades, en el mercado actual pueden encontrarse diferentes tipos, entre los más comunes están: </p>
                 <div class="row justify-content-center mt-2">
                     <div class="col-lg-6">
-                        <p>Esta es una forma textual de describir lo que sucede al interior de un sistema de información de una empresa, el cual funciona como la red de neuronas y venas del cuerpo humano, que constantemente recibe estímulos de diferente procedencia, los procesa y los convierte en una respuesta u acción</p><br />
-                        <p>Los sistemas de información pueden ser enfocados en diferentes aspectos o necesidades, en el mercado actual pueden encontrarse diferentes tipos, entre los más comunes están: </p>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="accordion" id="accordionExample">
+                        <div class="accordion mt-5" id="accordionExample">
                             <div class="card">
                                 <div class="card-header" id="headingOne" style="background: #36AFEA">
                                     <p style="margin-top: 1rem"><button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -137,7 +135,7 @@
 <div id="conceptos"></div>
 <div class="container">
     <div class="header-ecored">
-        <h1>2.1 Conceptos Generales</h1>
+        <h1>2.1 Conceptos generales</h1>
     </div>
     <div class="header">
         <div class="card">
@@ -147,7 +145,7 @@
                         <p>Los datos son valores, hechos, evidencias sobre un aspecto concreto de un objeto o concepto: si queremos comprar un apartamento, la antigüedad del edificio, donde está, la reforma a la que se sometió o los materiales de construcción, son los datos de los que podemos disponer (Marco et al., 2013).</p><br />
                         <p>En una organización los datos se generan en múltiples momentos de la operación, la cantidad de unidades producidas, el número de trabajadores por turno, la cantidad de pedidos despachados, el tiempo de recorrido en la entrega de un producto, el valor del inventario de la materia prima.</p>
                     </div>
-                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/conceptos.svg" /></div>
+                    <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/conceptos.png" /></div>
                 </div>
             </div>
         </div>
@@ -158,7 +156,7 @@
                         <p>Cuando estos datos se combinan de tal manera que en conjunto dan una idea elaborada sobre aquel objeto o concepto, entonces decimos que tenemos una información: en el ejemplo anterior, esos datos ordenados y relacionados nos dan la descripción del edificio donde está el apartamento que se quiere comprar (Marco et al., 2013).</p>
                         <p>En las empresas, puedo tomar todos los datos, recopilarlos adecuadamente y convertirlos en información relevante que pueda permitir tomar decisiones de forma objetiva, por ejemplo, dada la cantidad de personas en un turno y la cantidad de unidades producidas, puedo establecer si el costo de producción por cada unidad, aumento, disminuyo o se mantuvo estable frente a la semana anterior.</p>
                     </div>
-                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/conceptos2.svg" /></div>
+                    <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/conceptos2.png" /></div>
                 </div>
             </div>
         </div>
