--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -21,14 +21,14 @@
         <div class="card">
             <div class="card-body">
                 <div class="row my-4">
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-5">
                         <p>Las organizaciones en un contexto comercial, hace relación a un conjunto de personas, recursos y medios organizados de forma intencional y planificada, enfocada a lograr un mismo objetivo, económico o social. Este concepto es muy similar a término empresa, la cual está enfocado específicamente con la rentabilidad y sostenibilidad en un mercado, por ende, la generación de riqueza. </p>
                         <p class="mt-4">Según la Guía de Responsabilidad Social ISO 26000 de ICONTEC, define la organización como una entidad o grupo de personas e instalaciones con responsabilidad, autoridades y relaciones establecidas y objetivos identificables. </p>
                     </div>
-                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/recursos.svg" /></div>
+                    <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/recursos.svg" /></div>
                 </div>
                 <p>La gráfica complementa la última definición, ya que esta muestra las relaciones que se establecen entre los recursos, cada uno tiene una responsabilidad dentro de la organización, ya sea proveer un servicio o producto, gestionar la información, transformar una materia prima o generar valor.</p><br />
-                <p>Tanto las organizaciones como las empresas, tienen una estructura de personas con responsabilidades sobre unas actividades en especial, estas a su vez, componen una serie de procesos que une el esfuerzo humano, técnico y tecnológico para lograr un objetivo específico dentro de un sistema llamado empresa; las cuales en la actualidad, en su gran mayoría tienen un enfoque basado en procesos, los cuales tienen unas fuentes de entradas, entradas, actividades, salidas y receptores de las salidas, estos últimos tienen como resultado elementos que necesita el siguiente proceso para trabajar o un producto o servicio final.</p><img class="img-fluid mt-6" src="assets/images/pages/ilustraciones/recursos_mapa.svg" /><img class="img-fluid mt-6" src="assets/images/pages/ilustraciones/recursos_img.svg" />
+                <p>Tanto las organizaciones como las empresas, tienen una estructura de personas con responsabilidades sobre unas actividades en especial, estas a su vez, componen una serie de procesos que une el esfuerzo humano, técnico y tecnológico para lograr un objetivo específico dentro de un sistema llamado empresa; las cuales en la actualidad, en su gran mayoría tienen un enfoque basado en procesos, los cuales tienen unas fuentes de entradas, entradas, actividades, salidas y receptores de las salidas, estos últimos tienen como resultado elementos que necesita el siguiente proceso para trabajar o un producto o servicio final.</p><img class="img-fluid mt-6" src="assets/images/pages/ilustraciones/recursos_mapa.svg" /><img class="img-fluid mt-6" src="assets/images/pages/ilustraciones/recursos_img.png" />
             </div>
         </div>
     </div>
@@ -36,7 +36,7 @@
 <div id="centros"></div>
 <div class="container">
     <div class="header-ecored">
-        <h1>1.1 Centros de Distibución</h1>
+        <h1>1.1 Centros de distibución</h1>
     </div>
     <div class="header">
         <div class="card">
@@ -45,7 +45,7 @@
                     <div class="col-12 col-md-5">
                         <p>Algunas empresas cuentan con Centros de Distribución, los cuales son espacios planificados para ubicar, mantener y manipular mercancías y materiales (Mora, 2011). Las actividades que se desarrollan son diferentes de acuerdo con el tipo de operación; sin embargo, estas se complementan dado que funcionan como un sistema, con entradas, salidas y controles de procesos e información. En esta definición aplican diferentes técnicas y procesos logísticos, los cuales permiten la optimización de los procesos de una organización, disminuyendo costos y tiempos.</p>
                     </div>
-                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/2_1_centros.png" /></div>
+                    <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/2_1_centros.png" /></div>
                 </div>
             </div>
         </div>
@@ -80,11 +80,11 @@
                 <h1 class="text-center my-5" style="color: #4DD0E0"> el sistema logístico</h1><img class="img-fluid col-12" src="assets/images/pages/ilustraciones/sistema_logistico.svg" />
             </div>
         </div>
-        <div class="card" style="background-color:#94E3EC"><img class="img-fluid" src="assets/images/pages/ilustraciones/actividades.svg" style="margin-top: -4px" />
+        <div class="card" style="background-color:#94E3EC"><img class="img-fluid" src="assets/images/pages/ilustraciones/actividades.png" style="margin-top: -4px" />
             <div class="col-11 col-md-8 mt-5">
                 <article class="custom-item d-flex align-items-center flex-column flex-md-row"><img class="custom-item-img my-2" src="assets/images/pages/ilustraciones/actividades1.svg" />
                     <div class="card mb-0" style=" border-color: #94E3EC">
-                        <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de recepción:</strong>es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía. La mercancía se puede recibir de diferentes formas, tales como:</div>
+                        <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de recepción: </strong>es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía. La mercancía se puede recibir de diferentes formas, tales como:</div>
                     </div>
                 </article>
             </div>
@@ -99,14 +99,14 @@
                 <div class="col-12 col-md-3 my-6 my-md-0">
                     <div class="card" style="border-color:#C3E7F9">
                         <div class="card-body text-center" style="background-color:#C3E7F9">
-                            <div class="avatar avatar-xxl card-avatar"><img class="avatar-img" src="assets/images/pages/ilustraciones/ico2.svg" /></div><strong>A granel: </strong>método utilizado para cierto tipo de mercancía, que por su cantidad y forma, debe ser entregado con empaques especiales, por ejemplo: el arroz, el frijol, azúcar, entre otros.
+                            <div class="avatar avatar-xxl card-avatar"><img class="avatar-img" src="assets/images/pages/ilustraciones/ico2.svg" /></div><strong>A granel: </strong>método utilizado para cierto tipo de mercancía, que por su cantidad y forma, deben ser entregado en empaques individuales, por ejemplo: el arroz, el frijol, azúcar, entre otros.
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 mt-6 my-md-0">
                     <div class="card" style="border-color:#C3E7F9">
                         <div class="card-body text-center" style="background-color:#C3E7F9">
-                            <div class="avatar avatar-xxl card-avatar"><img class="avatar-img" src="assets/images/pages/ilustraciones/ico3.svg" /></div><strong>En arrume:<este>tipo de recibo, se hace con productos en cajas o en bultos, ese es el caso del recibo del café. </este></strong>
+                            <div class="avatar avatar-xxl card-avatar"><img class="avatar-img" src="assets/images/pages/ilustraciones/ico3.svg" /></div><strong>En arrume: </strong>este tipo de recibo, se hace con productos en cajas o en bultos, ese es el caso del recibo del café.
                         </div>
                     </div>
                 </div>
@@ -126,15 +126,15 @@
                             <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de Salida: </strong>está compuesto por las actividades al final del flujo dentro del centro, tales como el Picking, empaque y embarque. </div>
                         </div>
                     </article>
-                </div><img class="img-fluid col-11" src="assets/images/pages/ilustraciones/actividades_secuenciales.svg" />
-            </div>
+                </div>
+            </div><img class="img-a my-5 py-3 img-fluid col-11" src="assets/images/pages/ilustraciones/actividades_secuenciales.png" style="background-color:white; border-radius:60px" />
         </div>
     </div>
 </div>
 <div id="estrategias"></div>
 <div class="container">
     <div class="header-ecored">
-        <h1>1.2 Estrategias Competitivas</h1>
+        <h1>1.2 Estrategias competitivas</h1>
     </div>
     <div class="header">
         <div class="card">
@@ -143,10 +143,10 @@
                     <div class="col-12 col-md-5">
                         <p>De acuerdo con lo definido por el diccionario de la Real Academia Española, la palabra estrategia significa: que es un proceso regulable, conjunto de reglas que aseguran una decisión óptima en cada momento, y en el caso de la palabra competitiva, significa: relativo a competencia rivalidad de quienes disputan una misma cosa o la pretenden. Teniendo en cuenta lo anterior, las estrategias competitivas buscan tomar decisiones acertadas en los momentos en que se requiera para lograr algo que se pretenda, lo cual sea el objeto de la estrategia misma, ya sea la participación en un mercado, el aumento de atención a nuevos clientes, la disminución de tiempos de entrega de un producto, la satisfacción de los clientes, entre muchos otros aspectos que son relevantes en una organización.</p>
                     </div>
-                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/estrategias1.svg" /></div>
+                    <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/estrategias1.png" /></div>
                 </div>
                 <div class="row my-4">
-                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/estrategias2.svg" /></div>
+                    <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/estrategias2.svg" /></div>
                     <div class="col-12 col-md-4">
                         <p class="ml-3">Tal como se muestra en la anterior gráfica, y complementando las definiciones, en las estrategias se requiere una idea o un concepto con el cual un equipo de personas o de recursos, puedan trabajar para lograr un objetivo en común, el cual se define según la necesidad o las políticas de la empresa. </p>
                     </div>
@@ -157,9 +157,9 @@
             <div class="row">
                 <div class="col-1 col-md-1 text-center"><img class="img-fluid ml-5" src="assets/images/pages/ilustraciones/comilla1.svg" /></div>
                 <div class="col-10 col-md-10">
-                    <p class="mb-0 ml-4">Dicho sistema recibe unos estímulos concretados en solicitudes y utilizando el conjunto de las informaciones patrimonio del sistema, según indican sus reglas de gestión, elabora unos resultados que son enviados al exterior (Díaz, 2013). </p>
+                    <p class="mb-0 ml-4">Según Karla Escalante, autora del libro Estrategias Competitivas, establece que estas son la combinación de los fines (metas) por los cuales se está esforzando la empresa y los medios (políticas) con los cuales está buscando llegar a ellos y establece un proceso de formulación que contempla identificar el sector del mercado en que se encuentra posicionada actualmente la competencia, establecer que está sucediendo en el entorno y que es lo que debería estar haciendo la empresa. Lo anterior resalta la necesidad de conocerse como empresa, su entorno y lógicamente la competencia, con el fin de definir cuál será el concepto con el cual se logrará un determinado fin, que estará relacionado con las sostenibilidad de la organización en un mercado, el cual esta tan dinámico que necesita más herramientas para agregarle valor a su operación que al final el cliente pueda percibir una experiencia diferente a la que le pueden estar ofreciendo, para satisfacer sus necesidades. </p>
                 </div>
-                <div class="col-1 col-md-1 text-center"><img class="img-fluid mt-4 mr-5" src="assets/images/pages/ilustraciones/comilla2.svg" /></div>
+                <div class="col-1 col-md-1 text-center" style="display: flex; justify-content: end; flex-direction: column;"><img class="img-fluid mt-4 mr-5" src="assets/images/pages/ilustraciones/comilla2.svg" /></div>
             </div>
         </div>
     </div>
