--- a/public/pages/4-tema.html
+++ b/public/pages/4-tema.html
@@ -15,7 +15,7 @@
 </div>
 <div class="container">
     <div class="header-ecored">
-        <h1>3. Procesamiento de Datos</h1>
+        <h1>3. Procesamiento de datos</h1>
     </div>
     <div class="header">
         <div class="card">
@@ -25,14 +25,14 @@
                         <p>El procesamiento de datos hace referencia a la manipulación adecuada de los datos, de forma que generen información objetiva y útil a la organización, para su mejora y continua evaluación. De acuerdo a la actividad y al tamaño de las empresas, el volumen de datos varía, así mismo es la forma de captura y registro, estos en la actualidad están soportados por los grandes avances de la tecnología, la cual disminuye las limitaciones de espacio y tiempo, ya que no es necesario estar junto a un equipo de cómputo para registrar los datos efectivamente.</p><br />
                         <p>El procesamiento de datos se da de una forma cíclica, la cual la componen las siguientes etapas: origen, registro, preparación, comunicación y almacenamiento de datos.</p>
                     </div>
-                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/procesamiento.svg" /></div>
+                    <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/procesamiento.png" /></div>
                 </div>
             </div>
         </div>
     </div>
     <div id="origen"></div>
     <div class="header-ecored">
-        <h1>3.1 Origen y registro de Datos</h1>
+        <h1>3.1 Origen y registro de datos</h1>
     </div>
     <div class="header">
         <div class="card">
@@ -41,7 +41,7 @@
                     <div class="col-12 col-md-5">
                         <p>En cuanto al origen de los datos, este varía según la naturaleza y son conocidos como documentos fuente, de igual forma pueden estar de forma escrita, por medio de símbolos o gráficos, tales pueden ser una solicitud de pedido, una factura de compra venta, un reporte de inventario, entre otros; sea cual sea el medio en el cual se contenga los datos, es conveniente establecer y seguir un método de custodiar los datos para garantizar su integridad e impedir la manipulación indebida. </p>
                     </div>
-                    <div class="col-12-col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/procesamiento2.svg" /></div>
+                    <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/procesamiento2.png" /></div>
                 </div>
             </div>
         </div>
