--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -113,14 +113,14 @@
             </div>
             <div class="card-body"></div>
             <div class="row align-items-center justify-content-center my-5">
-                <div class="col-12 col-md-7">
+                <div class="col-12 col-md-6">
                     <article class="d-flex align-items-center flex-column flex-md-row"><img class="custom-item-img my-2" src="assets/images/pages/ilustraciones/actividades2.svg" />
                         <div class="card mb-5" style=" border-color: #94E3EC">
                             <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de Almacenamiento: </strong>el almacenamiento tiene como fin, proteger y conservar los materiales o mercancía, en condiciones óptimas, durante un determinado espacio de tiempo, es decir con las características y atributos con los cuales ingresaron al centro y con las que el cliente las necesita para satisfacer sus necesidades. </div>
                         </div>
                     </article>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-5">
                     <article class="custom-item d-flex align-items-center flex-column flex-md-row"><img class="custom-item-img my-2" src="assets/images/pages/ilustraciones/actividades3.svg" />
                         <div class="card mb-5" style=" border-color: #94E3EC">
                             <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de Salida: </strong>está compuesto por las actividades al final del flujo dentro del centro, tales como el Picking, empaque y embarque. </div>
@@ -155,7 +155,7 @@
         </div>
         <div class="py-3" style="background-color:#D4F4F7; border-radius:9px">
             <div class="row">
-                <div class="col-1 col-md-1 text-center"><img class="img-fluid ml-5" src="assets/images/pages/ilustraciones/comilla1.svg" /></div>
+                <div class="col-1 col-md-1 text-center" style="display: flex; justify-content: initial; flex-direction: column;"><img class="img-fluid ml-5" src="assets/images/pages/ilustraciones/comilla1.svg" /></div>
                 <div class="col-10 col-md-10">
                     <p class="mb-0 ml-4">Según Karla Escalante, autora del libro Estrategias Competitivas, establece que estas son la combinación de los fines (metas) por los cuales se está esforzando la empresa y los medios (políticas) con los cuales está buscando llegar a ellos y establece un proceso de formulación que contempla identificar el sector del mercado en que se encuentra posicionada actualmente la competencia, establecer que está sucediendo en el entorno y que es lo que debería estar haciendo la empresa. Lo anterior resalta la necesidad de conocerse como empresa, su entorno y lógicamente la competencia, con el fin de definir cuál será el concepto con el cual se logrará un determinado fin, que estará relacionado con las sostenibilidad de la organización en un mercado, el cual esta tan dinámico que necesita más herramientas para agregarle valor a su operación que al final el cliente pueda percibir una experiencia diferente a la que le pueden estar ofreciendo, para satisfacer sus necesidades. </p>
                 </div>
