--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -22,7 +22,7 @@
             <div class="card-body">
                 <div class="row my-4">
                     <div class="col-12 col-md-5">
-                        <p>Teniendo en cuenta el dinamismo de los mercados que se mencionaba anteriormente y específicamente las empresas que están inmersas en él, les ingresan y generan gran cantidad de información relacionada con todas las partes interesadas en su actividad, ya sean proveedores, clientes, el gobierno, otras empresas y hasta la misma comunidad o sociedad que se encuentra en su entorno de acción, y cada una de estas, juega un papel importante en el logro de los objetivos organizacionales, en la rentabilidad y su sostenibilidad, motivo por el cual se debe tratar adecuadamente todas estas entradas y salidas de información. </p>
+                        <p>Teniendo en cuenta el dinamismo de los mercados que se mencionaba anteriormente y específicamente las empresas que están inmersas en él, les ingresan y generan gran cantidad de información relacionada con todas las partes interesadas en su actividad, ya sean proveedores, clientes, el gobierno, otras empresas y hasta la misma comunidad o sociedad que se encuentra en su entorno de acción, y cada una de estas juega un papel importante en el logro de los objetivos organizacionales, en la rentabilidad y su sostenibilidad, motivo por el cual se debe tratar adecuadamente todas estas entradas y salidas de información. </p>
                     </div>
                     <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/sistemas.svg" /></div>
                 </div>
@@ -72,7 +72,7 @@
                                         </button></p>
                                 </div>
                                 <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
-                                    <div class="card-body" style="background: #D4F4F7">Los cuales procesar la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. </div>
+                                    <div class="card-body" style="background: #D4F4F7">Los cuales procesan la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. </div>
                                 </div>
                             </div>
                             <div class="card">
@@ -154,7 +154,7 @@
                 <div class="row my-4">
                     <div class="col-12 col-md-5">
                         <p>Cuando estos datos se combinan de tal manera que en conjunto dan una idea elaborada sobre aquel objeto o concepto, entonces decimos que tenemos una información: en el ejemplo anterior, esos datos ordenados y relacionados nos dan la descripción del edificio donde está el apartamento que se quiere comprar (Marco et al., 2013).</p>
-                        <p>En las empresas, puedo tomar todos los datos, recopilarlos adecuadamente y convertirlos en información relevante que pueda permitir tomar decisiones de forma objetiva, por ejemplo, dada la cantidad de personas en un turno y la cantidad de unidades producidas, puedo establecer si el costo de producción por cada unidad, aumento, disminuyo o se mantuvo estable frente a la semana anterior.</p>
+                        <p>En las empresas, puedo tomar todos los datos, recopilarlos adecuadamente y convertirlos en información relevante que pueda permitir tomar decisiones de forma objetiva, por ejemplo, dada la cantidad de personas en un turno y la cantidad de unidades producidas, puedo establecer si el costo de producción por cada unidad, aumento, disminuyó o se mantuvo estable frente a la semana anterior.</p>
                     </div>
                     <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/conceptos2.png" /></div>
                 </div>
@@ -165,7 +165,7 @@
         <div class="row justify-content-center align items-center">
             <div class="col-auto"><img class="img-fluid" src="assets/images/pages/ilustraciones/conceptos3.svg" /></div>
             <div class="col-10">
-                <p class="mb-0">Luego del proceso de tomar datos y revisarlos de forma conjunta y ordenada, se obtiene información, esta también puede evolucionar rápidamente, ya que si esta hace referencia a temas desconocidos y útiles, permite tomar decisiones en diferentes niveles de la organización, como operativo, táctico o estratégico; esto sería generación de conocimiento lo cual sería un gran resultado para la mejora continua, sostenibilidad y posiblemente el aumento de la competitividad en un mercado, puesto que se puede llegar a tener un factor diferenciador que agreguen valor según las necesidades identificadas.</p>
+                <p class="mb-0">Luego del proceso de tomar datos y revisarlos de forma conjunta y ordenada, se obtiene información, esta también puede evolucionar rápidamente, ya que si esta hace referencia a temas desconocidos y útiles, permite tomar decisiones en diferentes niveles de la organización, como operativo, táctico o estratégico; esto sería generación de conocimiento, un gran resultado para la mejora continua, sostenibilidad y posiblemente el aumento de la competitividad en un mercado, puesto que se puede llegar a tener un factor diferenciador que agregue valor según las necesidades identificadas.</p>
             </div>
         </div>
     </div>
