--- a/public/pages/4-tema.html
+++ b/public/pages/4-tema.html
@@ -22,8 +22,8 @@
             <div class="card-body">
                 <div class="row my-4">
                     <div class="col-12 col-md-5">
-                        <p>El procesamiento de datos hace referencia a la manipulación adecuada de los datos, de forma que generen información objetiva y útil a la organización, para su mejora y continua evaluación. De acuerdo a la actividad y al tamaño de las empresas, el volumen de datos varía, así mismo es la forma de captura y registro, estos en la actualidad están soportados por los grandes avances de la tecnología, la cual disminuye las limitaciones de espacio y tiempo, ya que no es necesario estar junto a un equipo de cómputo para registrar los datos efectivamente.</p><br />
-                        <p>El procesamiento de datos se da de una forma cíclica, la cual la componen las siguientes etapas: origen, registro, preparación, comunicación y almacenamiento de datos.</p>
+                        <p>El procesamiento de datos hace referencia a la manipulación adecuada de los datos, de forma que generen información objetiva y útil a la organización para su mejora y continua evaluación. El volumen de datos varía de acuerdo con la actividad y el tamaño de las empresas, así como la forma de captura y registro. En la actualidad están soportados por los grandes avances de la tecnología, la cual disminuye las limitaciones de espacio y tiempo, ya que no es necesario estar junto a un equipo de cómputo para registrar los datos efectivamente.</p><br />
+                        <p>El procesamiento de datos se da de una forma cíclica que se compone de las siguientes etapas: origen, registro, preparación, comunicación y almacenamiento de datos.</p>
                     </div>
                     <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/procesamiento.png" /></div>
                 </div>
@@ -39,7 +39,7 @@
             <div class="card-body">
                 <div class="row my-4">
                     <div class="col-12 col-md-5">
-                        <p>En cuanto al origen de los datos, este varía según la naturaleza y son conocidos como documentos fuente, de igual forma pueden estar de forma escrita, por medio de símbolos o gráficos, tales pueden ser una solicitud de pedido, una factura de compra venta, un reporte de inventario, entre otros; sea cual sea el medio en el cual se contenga los datos, es conveniente establecer y seguir un método de custodiar los datos para garantizar su integridad e impedir la manipulación indebida. </p>
+                        <p>En cuanto al origen de los datos, este varía según la naturaleza y son conocidos como documentos fuente. De igual manera, pueden estar de forma escrita por medio de símbolos o gráficos, tales pueden ser una solicitud de pedido, una factura de compra venta, un reporte de inventario, entre otros; sea cual sea el medio en el cual se contenga los datos, es conveniente establecer y seguir un método de custodiarlo para garantizar su integridad e impedir la manipulación indebida.</p>
                     </div>
                     <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/procesamiento2.png" /></div>
                 </div>
@@ -103,7 +103,7 @@
                 <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Comparación y análisis</strong></p>
                     <hr style="border: 1px solid #8EB5E1" />
-                    <p>Estos procesos muestran qué factores determinan el destino, tratamiento y aplicabilidad de los datos; existen atributos, tales como, el orden, naturaleza, proporción, relación, similitud o valor relativo de los datos. </p>
+                    <p>Estos procesos muestran qué factores determinan el destino, tratamiento y aplicabilidad de los datos; existen atributos, tales como el orden, naturaleza, proporción, relación, similitud o valor relativo de los datos. </p>
                 </div>
             </div>
             <div class="row justify-content-center align-items-center mx-3 mt-5 mb-3" style="border-radius: 10px; background-color:#C3E7F9;">
@@ -122,10 +122,7 @@
     </div>
     <div class="header">
         <div class="card">
-            <div class="card-body">
-                <p>El registro de los datos se relaciona con el soporte y su medio (datos consignados), esta acción denomina el seguimiento de un proceso que debe ser sistemático y que debe cumplirse para consignar los datos en un medio, editarlos, codificarlos y clasificarlos.</p><br />
-                <p>Las etapas en la función del registro de datos son los siguientes: </p>
-            </div>
+            <div class="card-body"></div>
             <div class="row justify-content-center align-items-center mx-3" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso9.svg" style="width: 60%" /></div>
                 <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
