Corrección Texto PDF e Imagenes final

--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -127,7 +127,7 @@
                         </div>
                     </article>
                 </div>
-            </div><img class="img-a my-5 py-3 img-fluid col-11" src="assets/images/pages/ilustraciones/actividades_secuenciales.png" style="background-color:white; border-radius:60px" />
+            </div><img class="img-a my-5 py-3 img-fluid col-11" src="assets/images/pages/ilustraciones/actividades_secuenciales.svg" style="background-color:white; border-radius:60px" />
         </div>
     </div>
 </div>
