--- a/public/pages/4-tema.html
+++ b/public/pages/4-tema.html
@@ -122,8 +122,7 @@
     </div>
     <div class="header">
         <div class="card">
-            <div class="card-body"></div>
-            <div class="row justify-content-center align-items-center mx-3" style="border-radius: 10px; background-color:#C3E7F9;">
+            <div class="row justify-content-center align-items-center mx-3 mt-4" style="border-radius: 10px; background-color:#C3E7F9;">
                 <div class="col-2 justify-content-center align-items-center"><img class="rounded mx-auto d-block" src="assets/images/pages/ilustraciones/Recurso9.svg" style="width: 60%" /></div>
                 <div class="col-10" style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px">
                     <p style="padding-top: 2%"> <strong>Preparación de reportes</strong></p>
